update CLion instructions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ list(APPEND COMMON_CXX_FLAGS -D_FILE_OFFSET_BITS=64)
 FILE(GLOB SOURCES src/*.cpp src/*.h)
 if(DEFINED ENV{IN_CLION})
     # Don't really need this lib (handled by setup.py), but required for CLion's search etc.
-    # NOTE: Set env var CONDA_PREFIX=/Users/avishai/conda/envs/genomekit_dev in CLion CMake preferences.
+    # NOTE: Set env vars IN_CLION=1;CONDA_PREFIX=$HOME/conda/envs/genomekit_dev in CLion CMake preferences.
     # include numpy, Python.h, fmt
     include_directories(
             $ENV{CONDA_PREFIX}/lib/python3.8/site-packages/numpy/core/include/
