--- a/genomekit_dev.yml
+++ b/genomekit_dev.yml
@@ -13,7 +13,7 @@ dependencies:
   - typing-extensions
   - zlib
   - importlib-metadata
-  - google-cloud-storage
+  - google-cloud-storage>=2.10.0
 
   # dev + test dependencies
   - ccache
