--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -27,11 +27,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: get meta.yaml from conda-forge for cache key calculation
+        shell: bash -l -e {0}
+        run: |
+          set -x
+          mkdir -p conda-recipe
+          curl -s -L -o conda-recipe/meta.yaml https://raw.githubusercontent.com/conda-forge/genomekit-feedstock/main/recipe/meta.yaml
+          set +x
+
       - name: restore mamba env
         id: restore_mamba_cache
         uses: actions/cache/restore@v4
         with:
-          key: mamba-env-${{ runner.os }}-${{ runner.arch }}-${{ hashFiles('.github/workflows/run-tests.yaml', 'conda-recipe/meta.yaml') }}
+          key: mamba-env-${{ runner.os }}-${{ runner.arch }}-${{ hashFiles('.github/workflows/run-tests.yaml', '.github/actions/**', 'conda-recipe/meta.yaml') }}
           path: |
             ~/micromamba
             ~/.condarc
