only run unit tests on code changes

--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -3,6 +3,12 @@ run-name: run unit tests
 on:
   pull_request:
     branches-ignore: ["release-please*"]
+    paths:
+    - "genome_kit/**"
+    - "src/**"
+    - "tests/**"
+    - "genomekit_dev.yml"
+    - "CMakelists.txt"
 
 jobs:
   build:
