--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -34,12 +34,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: get meta.yaml from conda-forge for cache key calculation
-        shell: bash -l -e {0}
-        run: |
-          set -x
-          mkdir -p conda-recipe
-          curl -s -L -o conda-recipe/meta.yaml https://raw.githubusercontent.com/conda-forge/genomekit-feedstock/main/recipe/meta.yaml
-          set +x
+        uses: ./.github/actions/curl-meta-yaml
 
       - name: restore mamba env
         id: restore_mamba_cache
