remove stdlib replacement

--- a/.github/actions/curl-meta-yaml/action.yaml
+++ b/.github/actions/curl-meta-yaml/action.yaml
@@ -9,6 +9,6 @@ runs:
         mkdir -p conda-recipe
         curl -s -L -o conda-recipe/meta.yaml https://raw.githubusercontent.com/conda-forge/genomekit-feedstock/main/recipe/meta.yaml
         # build from local source, not from the latest release tarball
-        sed -i -e 's|url: https://github.com/deepgenomics/GenomeKit/archive/refs/tags/v.*$|path: ../|1; /sha256: /d; /- {{ stdlib("c") }}/d' conda-recipe/meta.yaml
+        sed -i -e 's|url: https://github.com/deepgenomics/GenomeKit/archive/refs/tags/v.*$|path: ../|1; /sha256: /d' conda-recipe/meta.yaml
         head -10 conda-recipe/meta.yaml
         set +x
