--- a/conda-recipe/conda_build_config.yaml
+++ b/conda-recipe/conda_build_config.yaml
@@ -4,7 +4,9 @@ c_stdlib:
 c_stdlib_version:
 - '2.12' # [linux]
 - '11.0' # [osx]
+numpy:
+- '1.22'
 python:
-  - 3.8
-  - 3.9
-  - 3.10
+- '3.8'
+- '3.9'
+- '3.10'
