chore: build error with conda-forge's c stdlib dep (#57)
* test with latest conda-build

* remove path filtering

* remove stdlib replacement

* revert conda-build, add c_stdlib build variants

* pin numpy to 3.8 compatible

* rebuild on build file changes

--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -4,7 +4,12 @@ on:
   pull_request:
     branches-ignore: ["release-please*"]
     paths:
+    - ".github/actions/**"
+    - ".github/workflows/**"
+    - "conda-recipe/**"
     - "genome_kit/**"
+    - "setup.py"
+    - "setup/**"
     - "src/**"
     - "tests/**"
 
