chore: fix publish-docs failure
sphinx>=8 causes error "sphinx 'style' is undefined"
e.g https://github.com/deepgenomics/GenomeKit/actions/runs/10359784764

--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -60,7 +60,7 @@ jobs:
             m2r2 \
             make \
             myst-parser \
-            sphinx \
+            sphinx<8 \
             sphinx_rtd_theme
           set +x
 
