--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,6 @@ cmake_minimum_required(VERSION 3.21)
 project(GenomeKit)
 
 set(CMAKE_CXX_STANDARD 20)
-if(NOT DEFINED CMAKE_CXX_FLAGS OR "${CMAKE_CXX_FLAGS}" STREQUAL "")
-    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS_RELEASE})
-endif ()
-string(REPLACE " " ";" COMMON_CXX_FLAGS ${CMAKE_CXX_FLAGS})
-list(APPEND COMMON_CXX_FLAGS -D_FILE_OFFSET_BITS=64)
 
 FILE(GLOB SOURCES src/*.cpp src/*.h)
 if(DEFINED ENV{IN_CLION})
@@ -26,7 +21,7 @@ if(DEFINED ENV{IN_CLION})
     find_package(fmt)
     add_library(gkdev ${SOURCES})
     target_link_libraries(gkdev fmt::fmt ZLIB::ZLIB)
-    target_compile_options(gkdev PRIVATE ${COMMON_CXX_FLAGS} -DGKPY_LIBNAME=$ENV{CONDA_PREFIX}/lib -D_WANT_MAIN=1)
+    target_compile_definitions(gkdev PRIVATE -D_FILE_OFFSET_BITS=64 -DGKPY_LIBNAME=$ENV{CONDA_PREFIX}/lib -D_WANT_MAIN=1)
 endif()
 
 # We don't want any py_* files in gk because it brings in the python runtime and causes compile errors
@@ -34,7 +29,7 @@ set(NON_PY_SOURCES ${SOURCES})
 list(FILTER NON_PY_SOURCES EXCLUDE REGEX "py_.*")
 
 add_executable(main ${NON_PY_SOURCES})
-target_compile_options(main PRIVATE ${COMMON_CXX_FLAGS} -D_FILE_ABS_PATH='\"${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp\"' -D_WANT_MAIN=1)
+target_compile_definitions(main PRIVATE -D_FILE_OFFSET_BITS=64 -D_FILE_ABS_PATH='\"${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp\"' -D_WANT_MAIN=1)
 set_target_properties(main PROPERTIES LINKER_LANGUAGE CXX)
 find_package(ZLIB)
 find_package(fmt)
