--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -58,7 +58,8 @@ jobs:
         shell: bash -l -e {0}
         run: |
           set -x
-          pgk_file_path=$(eval ls -1 ~/conda-bld/*/*.tar.bz2 | head -1)
+          # explicitly select py310
+          pgk_file_path=$(eval ls -1 ~/conda-bld/linux-64/*py310*.tar.bz2 | head -1)
           pkg_file=$(basename ${pgk_file_path})
           pkg_version=$(echo $pkg_file | grep -Eo '[0-9]+\.[0-9]+\.[0-9]+')
           echo "PKG_VERSION=${pkg_version}" >> $GITHUB_OUTPUT
