--- a/genomekit_dev.yml
+++ b/genomekit_dev.yml
@@ -6,7 +6,7 @@ channels:
 dependencies:
   - appdirs>=1.4.0
   - fmt
-  - numpy
+  - numpy <2.0dev0
   - python>=3.9.0,<3.13.0
   - tqdm
   - typing-extensions
