feat: deprecate py38, support py11 py12 (#101)
* support py311 change to PyType_Ready()
see https://docs.python.org/3/whatsnew/3.11.html
fixes 'type genome_kit._cxx.GenomeTrackBuilder has the Py_TPFLAGS_HAVE_GC flag but has no traverse function'
* don't use PyAutoRef for the static map (don't decref)

Trying to call either PyThreadState_Get() or PyInterpreterState_Get()
results in an error:
Fatal Python error: PyInterpreterState_Get: the function must be called
with the GIL held, after Python initialization and before Python finalization,
but the GIL is released (the current Python thread state is NULL)

(might try `PyThreadState_GetUnchecked()` in a future PR

also:
* GenomeTrack no longer needs an owner
* fail if this python version wasn't built on conda-forge
(test python versions according to local conda_build_config.yaml)
- remove unused numpy pin from conda_build_config.yaml
- numpy <2.0dev0 to match meta.yaml in feedstock (avoid build failure)

--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -30,7 +30,7 @@ jobs:
     needs: build
     strategy:
       matrix:
-        python-version: [["39", "3.9"], ["310", "3.10"]]
+        python-version: [["39", "3.9"], ["310", "3.10"], ["311", "3.11"], ["312", "3.12"]]
         platform: [["linux-64", "ubuntu-latest"], ["osx-64", "macos-latest"]]
     runs-on: ${{ matrix.platform[1] }}
     steps:
@@ -81,6 +81,11 @@ jobs:
           set -x
           micromamba activate test
           conda index ~/conda-bld
-          conda mambabuild --croot /tmp/conda-bld -t ~/conda-bld/*/*py${{ matrix.python-version[0] }}*.tar.bz2 --extra-deps python=${{ matrix.python-version[1] }}
+          files=(~/conda-bld/*/*py${{ matrix.python-version[0] }}*.tar.bz2)
+          if [ ! -e "${files[0]}" ]; then
+              echo "No files matched for py${{ matrix.python-version[0] }}"
+              exit 1 
+          fi          
+          conda mambabuild --croot /tmp/conda-bld -t $files --extra-deps python=${{ matrix.python-version[1] }}
           conda clean -it
           set +x
