--- a/genomekit_dev.yml
+++ b/genomekit_dev.yml
@@ -12,6 +12,9 @@ dependencies:
   - zlib
   - importlib-metadata
   - google-cloud-storage>=2.10.0
+  - boto3
+  # https://github.com/conda/conda/issues/13619
+  - pyopenssl >= 23.2.0
 
   # dev + test dependencies
   - ccache
