clarify file purpose

--- a/conda-recipe/conda_build_config.yaml
+++ b/conda-recipe/conda_build_config.yaml
@@ -1,3 +1,5 @@
+# this file does not affect the conda-forge build, only the local repos github actions
+# (in particular running unit tests)
 c_stdlib:
 - sysroot # [linux]
 - macosx_deployment_target # [osx]
