--- a/genomekit_dev.yml
+++ b/genomekit_dev.yml
@@ -12,6 +12,7 @@ dependencies:
   - zlib
   - importlib-metadata
   - google-cloud-storage>=2.10.0
+  - boto3
 
   # dev + test dependencies
   - ccache
