--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -49,14 +49,14 @@ jobs:
         shell: bash -l -e {0}
         run: |
           set -x
-          # explicitly select py310
           pgk_file_path=$(eval ls -1 ~/conda-bld/linux-64/*py310*.tar.bz2 | head -1)
           pkg_file=$(basename ${pgk_file_path})
           pkg_version=$(echo $pkg_file | grep -Eo '[0-9]+\.[0-9]+\.[0-9]+')
           echo "PKG_VERSION=${pkg_version}" >> $GITHUB_OUTPUT
           micromamba activate build
           conda index ~/conda-bld
-          mamba create -n genomekit -c file://${HOME}/conda-bld genomekit=${pkg_version}
+          # explicitly specify py310
+          mamba create -n genomekit -c file://${HOME}/conda-bld genomekit=${pkg_version} python=3.10
           set +x
 
       - name: Set up QEMU
