--- a/.github/actions/curl-meta-yaml/action.yaml
+++ b/.github/actions/curl-meta-yaml/action.yaml
@@ -13,6 +13,6 @@ runs:
         # - remove the related sha for that tarball
         # - build for all locally allowed versions of python (conda-recipe/conda_build_config.yaml)
         # - set the version to the local release-please version (for docs and docker publish)
-        sed -i -E "s|url: https://github.com/deepgenomics/GenomeKit/archive/refs/tags/v.*$|path: ../|1; /sha256: /d; /skip: true /d;s/\{% set version = \".+\" %\}/{% set version = \"${GK_VERSION}\" %}/" conda-recipe/meta.yaml
+        sed -i -E "s|url: https://github.com/deepgenomics/GenomeKit/archive/refs/tags/v.*$|path: ../|1; /sha256: /d; /skip: true /d;s/\{% set version = \".+\" %\}/\{% set version = \"${GK_VERSION}\" %\}/" conda-recipe/meta.yaml
         head -10 conda-recipe/meta.yaml
         set +x
