--- a/.github/workflows/build-wheels.yaml
+++ b/.github/workflows/build-wheels.yaml
@@ -22,7 +22,7 @@ jobs:
 
             PYTHON=/opt/python/cp312-cp312/bin/python
 
-            \$PYTHON -m pip install -U pip setuptools wheel cmake auditwheel
+            \$PYTHON -m pip install -U pip setuptools wheel cmake auditwheel numpy
 
             # Build and install libfmt (statically linked)
             cd /tmp
