attempt add testing step for wheels

--- a/.github/workflows/build-wheels.yaml
+++ b/.github/workflows/build-wheels.yaml
@@ -151,7 +151,7 @@ jobs:
                 python -m pip install \$WHEEL
 
                 # Run import and unit tests
-                # python -c 'import genome_kit; print(genome_kit.__version__)'
+                python -c 'import genome_kit; print(genome_kit.__version__)'
 
                 python -m unittest discover
               "
