--- a/.github/workflows/build-wheels.yaml
+++ b/.github/workflows/build-wheels.yaml
@@ -1,8 +1,9 @@
 name: Build Wheels
+run-name: build-wheels
 
 on:
   push:
-  pull_request:
+#    branches: [test-ci-wheels]
 
 jobs:
   build:
@@ -80,8 +81,7 @@ jobs:
 
               # Run import and tests
               python -c 'import genome_kit; print(genome_kit.__version__)'
-              cd /tests
-              python -m unittest discover
+              ls tests/test_*.py | sed 's/\.py$//' | sed 's/tests\//tests./' | CI=1 xargs --verbose -I {} python -m unittest {}
             "
 
 
